# ChatGPT-Coding-Experiments

./: .gitignore  README.md  compare_files
Chat_System/: Prompt_GPT4.md  README.md
Chat_System/code.debugged/include/: chat_client.h
Chat_System/code.debugged/proto/: CMakeLists.txt  chat.proto
Chat_System/code.debugged/src/: CMakeLists.txt
Chat_System/code.proposed/include/: chat_client.h  chat_server.h
Chat_System/code.proposed/proto/: CMakeLists.txt
Chat_System/code.proposed/src/: chat_server.cpp  client_main.cpp  server_main.cpp
Language_Tools/: GPT35_StateMachine.ipynb  GPT35_lark_and_llvm.ipynb
Memory_Allocator/: Prompt_GPT-4.txt  main.cpp
Python_Cpp_Interop_1/: CMakeLists.txt  ImageProcessor.h  ImageReader.h  Model: GPT-4 Prompt.txt  imageproc.cpp  myscript.py
Python_Cpp_Interop_2/: CMakeLists.txt  ImageProcessor.h  ImageReader.cpp  Prompt_GPT-4.txt  Prompt_GPT4.md  README.md  imageprocessing.cpp
Python_Cpp_Interop_2/code.debugged/: ImageProcessor.cpp
Python_Cpp_Interop_2/code.proposed/: CMakeLists.txt  ImageReader.h  ImageWriter.h
Python_Cpp_Interop_2/myscript.build/: __bytecode.const  __constants.const  __loader.c  module.__main__.c  module.__main__.const  scons-report.txt
Python_Cpp_Interop_No_Var_Exchange/: Prompt_GPT4.md  README.md
Python_Cpp_Interop_No_Var_Exchange/code.debugged/: CMakeLists.txt  ImageWriter.cpp  processing_script.py
Python_Cpp_Interop_No_Var_Exchange/code.proposed/: ImageDataHolder.h  ImageProcessor.h  processing_script.py
Python_Cpp_Interop_Variable_Exchange/: Prompt_GPT-4.md  README.md
Python_Cpp_Interop_Variable_Exchange/code.proposed/: CMakeLists.txt  ImageProcessor.h  ImageReader.h  ImageWriter.h  imageproc.cpp
Python_Cpp_Interop_Variable_Exchange/code.proposed/myscript.build/: __constants.c  __loader.c  module.__main__.c  module.__main__.const  scons-report.txt
Python_Cpp_Interop_Variable_Exchange/code.proposed/myscript.build/static_src/: CompiledFunctionType.c  MainProgram.c
Socket_Programming/SimpleSocketWithGPT35/: CMakeLists.txt  Prompt.md  client.cpp  client_1.cpp  server.cpp  server_1.cpp  server_2.cpp  server_3.cpp  server_4.cpp
Socket_Programming/SimpleSocketWithGPT40/: CMakeLists.txt  CMakeLists_1.txt  Prompt.md  client.cpp  client_1.cpp  server.cpp  server_1.cpp  server_2.cpp
State_Machine/: instructions.txt
State_Machine/include/: states.h
State_Machine/src/: machine_one.impl  state_base.cpp
chat_system_2/: OnlyPrompts.txt  Prompt_GPT4.md  README.md
chat_system_2/code.debugged/: CMakeLists.txt
chat_system_2/code.debugged/include/: chat_server.h
chat_system_2/code.debugged/src/: chat_client.cpp  client_main.cpp
chat_system_2/code.proposed/src/: CMakeLists.txt  chat_client.cpp  client_main.cpp
gRPC_Router_35/: CMakeLists.txt  Prompt_GPT-3.md  client.cpp  router.proto  server.cpp
gRPC_Router_40/: Prompt_GPT-4.txt  gRPC_Router_40_output.txt
gRPC_Router_40/protos/: chat.proto
gRPC_Router_40/src/: client.cpp  server.cpp
gRPC_Router_40_bidirectional/: CMakeLists.txt  Prompt_GPT-4.txt
gRPC_Router_40_bidirectional/protos/: chat.proto
gRPC_Router_40_bidirectional/src/: client.cpp  server.cpp
language_tools/: GPT40_StateMachine.ipynb  state_machine.lark
local_chat_1/: Prompt_GPT-4.txt
local_chat_1/protos/: chat.proto
local_chat_1/src/: client.cpp  server.cpp
local_chat_2/: Prompt_GPT-4.txt
local_chat_2/protos/: chat.proto
local_chat_2/src/: client.cpp  server.cpp
local_chat_3/: CMakeLists.txt  CMakeLists_0.txt  CMakeLists_2.txt  Prompt_CMake_(GPT-3.md  Prompt_GPT-4.txt
local_chat_3/protos/: chat.proto
local_chat_3/src/: client.cpp  server.cpp
local_chat_test/: CMakeLists.txt  Installations.txt.md
memoryallocator_1/: CMakeLists.txt  Prompt_GPT-4.txt  main.cpp
memoryallocator_2/: CMakeLists.txt  MemoryManager.h  main35.cpp
statemachine_1/: CMakeLists.txt
statemachine_1/application/: test.cpp
statemachine_1/include/: machine_base.h  machine_one.h  state_base.h  states.h
statemachine_1/src/: machine_base.cpp  machine_one.cpp  state_base.cpp  states.cpp
statemachine_1_GPT4/: CMakeLists.txt
statemachine_1_GPT4/application/: test.cpp
statemachine_1_GPT4/include/: machine_base.h  machine_one.h  state_base.h
statemachine_1_GPT4/src/: machine_base.cpp  states.cpp
statemachine_2/: CMakeLists.txt  instruction_for_python.txt  instructions_2.txt  instructions_state_base.txt  request_code.py
statemachine_2/application/: test.cpp
statemachine_2/include/: derived_machine.h  derived_states.h  machine_base.h  state_base.h
statemachine_2/output/include/: state_base.h
statemachine_2/output/src/: state_base.cpp
statemachine_2/src/: derived_machine.cpp  derived_states.cpp  machine_base.cpp  state_base.cpp
utils/javascript/: getcode_230428.js  my_api_key.txt
utils/python/: get_code_230428.py  my_api_key.py
